Fix: alterando estrutura de arquivos principais e adicionando barra de navegação à página do jogo aberto

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="/style.css">
     <title>Ligado na Tela</title>
 </head>
 <body>
@@ -21,10 +21,10 @@
     <div class="display">
         <h2 class="pagetitle">Recomendados</h2>
         <div class="games">
-            <ul><a href="../game/game.html" class="game"><img src="assets\games\math-game\html5game\splash.png" alt=""><p>snack catch</p></a></ul>
-            <ul><a href="" class="game"><img src="" alt="">Game 2</a></ul>
-            <ul><a href="" class="game"><img src="" alt="">Game 3</a></ul>
-            <ul><a href="" class="game"><img src="" alt="">Game 4</a></ul>
+            <ul><a href="/pages/game/game.html" class="game"><img src="assets\images\doggo.png" alt=""><p>snack catch</p></a></ul>
+            <ul><a href="" class="game"><img src="assets\images\doggo.png" alt="">Game 2</a></ul>
+            <ul><a href="" class="game"><img src="assets\images\doggo.png" alt="">Game 3</a></ul>
+            <ul><a href="" class="game"><img src="assets\images\doggo.png" alt="">Game 4</a></ul>
         </div>
     </div>
 </body>
