--- a/pages/game/game.html
+++ b/pages/game/game.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../style.css">
     <title>snack catch</title>
 </head>
 <body>
@@ -10,13 +11,15 @@
         <div class="container">
             <h1>snack catch</h1>
             <div class="menu">
-                <ul><a href="../main/home.html">Todos os jogos</a></ul>
+                <ul><a href="../../index.html">Todos os jogos</a></ul>
                 <ul><a href="">Sobre</a></ul>
                 <ul><a href="">Contato</a></ul>
             </div>
         </div>
     </nav>
 
-    <iframe id="" src="../../assets/games/math-game/play.html" name="" width="1366" height="768" frameborder="0" marginheight="0" scrolling="no"></iframe>
+    <div class="gameWindow">
+        <iframe class="gameDisplay" src="../../assets/games/math-game/play.html" name="" width="672" height="416" frameborder="0" marginheight="0" scrolling="no"></iframe>
+    </div>
 </body>
 </html>
