minor fix: atualizando filepath do link html para a página de jogo aberto

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="display">
         <h2 class="pagetitle">Recomendados</h2>
         <div class="games">
-            <ul><a href="ligadoNaTela/pages/game/game.html" class="game"><img src="assets\images\doggo.png" alt=""><p>snack catch</p></a></ul>
+            <ul><a href="/pages/game/game.html" class="game"><img src="assets\images\doggo.png" alt=""><p>snack catch</p></a></ul>
             <ul><a href="" class="game"><img src="assets\images\doggo.png" alt="">Game 2</a></ul>
             <ul><a href="" class="game"><img src="assets\images\doggo.png" alt="">Game 3</a></ul>
             <ul><a href="" class="game"><img src="assets\images\doggo.png" alt="">Game 4</a></ul>
