Add: adicionando título do jogo à página do jogo

--- a/pages/game/game.html
+++ b/pages/game/game.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar">
         <div class="container">
-            <h1>snack catch</h1>
+            <h1>Ligado na Tela!</h1>
             <div class="menu">
                 <ul><a href="../../index.html">Todos os jogos</a></ul>
                 <ul><a href="">Sobre</a></ul>
@@ -18,8 +18,10 @@
         </div>
     </nav>
 
-    <div class="gameWindow">
-        <iframe class="gameDisplay" src="../../assets/games/math-game/play.html" name="" width="672" height="416" frameborder="0" marginheight="0" scrolling="no"></iframe>
+    <div class="display">
+        <div class="gameWindow">
+            <iframe class="gameDisplay" src="../../assets/games/math-game/play.html" name="" width="672" height="416" frameborder="0" marginheight="0" scrolling="no"></iframe>
+        </div>
     </div>
 </body>
 </html>
