Fix: adicionando título à página de jogos

--- a/pages/game/game.html
+++ b/pages/game/game.html
@@ -19,6 +19,7 @@
     </nav>
 
     <div class="display">
+        <h2>Snack Catch</h2>
         <div class="gameWindow">
             <iframe class="gameDisplay" src="../../assets/games/math-game/play.html" name="" width="672" height="416" frameborder="0" marginheight="0" scrolling="no"></iframe>
         </div>
