--- a/pages/game/game.html
+++ b/pages/game/game.html
@@ -9,9 +9,9 @@
 <body>
     <nav class="navbar">
         <div class="container">
-            <h1>Ligado na Tela!</h1>
+            <h1><a href="../../index.html">Ligado na Tela!</a></h1>
             <div class="menu">
-                <ul><a href="../../index.html">Todos os jogos</a></ul>
+                <ul><a href="">Todos os jogos</a></ul>
                 <ul><a href="">Sobre</a></ul>
                 <ul><a href="">Contato</a></ul>
             </div>
